--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.10.6",
     "@fullcalendar/core": "^6.1.5",
     "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
     "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/react": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
@@ -22,7 +24,9 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^29.2.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "fullcalendar": "^6.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
