--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
+  "homepage": "https://DeepshikaReddy.github.io/InvestmentProfile",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -58,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
